# my_python_app

./: .gitignore  Makefile  README.md  pyproject.toml
src/common/: __init__.py  constants.py
src/core/: __init__.py  main.py
src/plugins/enemy_plugin/: requirements.txt  setup.py
src/plugins/enemy_plugin/src/: __init__.py  enemy.py
src/plugins/player_plugin/: requirements.txt  setup.py
src/plugins/player_plugin/src/: __init__.py  player.py
