[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "my_python_app"
version = "0.0.1"
authors = [
    {name = "Mathias Gredal", email = "magre21@student.sdu.dk"},
]
description = "A description"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests"
]

[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "pretend",
    "pytest",
    "pytest-cov",
    "black>=22.3.0",
    "ruff < 0.0.253",
    "interrogate",
    "isort",
    "mypy",
    "types-html5lib",
    "types-requests",
    "types-toml",
    "pdoc"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["plugins"]

[tool.isort]
line_length = 100
multi_line_output = 3
known_first_party = ["core", "common"]
include_trailing_comma = true

[tool.black]
line-length = 100

[tool.interrogate]
exclude = ["venv"]
ignore-semiprivate = true
fail-under = 100

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
ignore = ["G004", "D203", "D213", "INP001", "E501"]
select = ["ALL"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]